[package]
name = "em_proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "run"
path = "src/run.rs"

[dependencies]
boringtun = { version = "0.4.0" }
libc = { version = "0.2.126" }
once_cell = { version = "1.15.0" }

simple_logger = { version = "2.3.0" }
log = { version = "0.4.17" }

[dev-dependencies]
rand = { version = "*" }

[lib]
crate-type = ["staticlib"]